packages/taquito-michel-codec/test/contracts_011/ill_typed/view_toplevel_duplicated_name.tz
parameter nat ;
storage nat ;
code { CAR ; NIL operation ; PAIR } ;
view "add" nat nat { UNPAIR ; ADD } ;
view "add" nat unit { DROP ; PUSH unit Unit } ;
